[package]
name = "hustar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.39.2"
roaring = "0.8.1"
croaring = "0.5.1"
show-image = "0.10.1"
image = "0.24.1"
flexbuffers = "2.0.0"
serde = "1.0.136"
binwrite = "0.2.1"
bincode = "1.3.3"
bitvec = "1"
byteorder = "1.4.3"
vint64 = "1.0.1"